implement plot chart

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -35,6 +35,8 @@
         </table>
     {% endif %}
     {% if plt %}
+        {{ 5 }}
+        {{ plt }}
         {{ plt.show }}
     {% endif %}
 
